@startuml System_Overview_Class_Diagram
hide methods
skinparam classAttributeIconSize 0
skinparam defaultFontSize 14
skinparam titleFontSize 20

class User {
  Name
  Email / Account
}

class Category {
  Category Name
}

class Product {
  Product SKU
  Product Name
  Current Stock
  Average Cost
}

class ProductVariant {
  Variant & Unit
  Conversion Factor
  Sell Price
}

class Supplier {
  Supplier Name
  Contact & Address
}

class Customer {
  Customer Name
  Contact Person
  Credit Balance
}

class Purchase {
  Order Number
  Total Cost
  Archive Status
}

class Sale {
  Invoice Number
  Total Price
  Total Paid
  Payment Method
}

class Debt {
  Remaining Debt
  Payment Status
}

class CustomerReturn {
  Return Number
  Compensation Type
}

class SystemNotification {
  Notification Message
  Read Status
}

' Relational Mapping Models
User "1" -- "*" Sale : Executes >
User "1" -- "*" Purchase : Authorizes >

Category "1" -- "*" Product : Contains <
Product "1" -- "*" ProductVariant : Sorted by >

Supplier "1" -- "*" Purchase : Provides for >
Purchase "1" -- "*" Product : Records acquisition >

Customer "1" -- "*" Sale : Makes purchase via >
Customer "1" -- "*" Debt : Owes through >
Customer "1" -- "*" CustomerReturn : Registers return >

Sale "1" -- "*" Product : Contains item details >
Sale "1" -- "0..1" Debt : Results in billing >
Sale "1" -- "*" CustomerReturn : Referenced historically by >

CustomerReturn "1" -- "*" Product : Executes product return >

User "1" -- "*" SystemNotification : Receives event log delivery >
@enduml
